# CSE225OlympicProject

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: app.js  index.html  styles.css
docs/data/: athletes.csv
include/: Athlete.h  AthleteStore.h  Auth.h  CSVStore.h  Menu.h  Platform.h  Stats.h
src/: AthleteStore.cpp  Auth.cpp  CSVStore.cpp  Menu.cpp  Platform.cpp  Stats.cpp  main.cpp
